Add email and secret field

--- a/src/base/templates/base/order_detail.html
+++ b/src/base/templates/base/order_detail.html
@@ -21,6 +21,10 @@
 					<td>{{object.first_name}} {{object.last_name}}</td>
 				</tr>
 				<tr>
+					<th scope="row">E-Mail</th>
+					<td>{{object.email}}</td>
+				</tr>
+				<tr>
 					<th scope="row">Anzahl Teilnehmde</th>
 					<td>{{object.participant_count}}</td>
 				</tr>
