Add workshop lists

--- a/src/base/templates/base/workshop_detail.html
+++ b/src/base/templates/base/workshop_detail.html
@@ -71,6 +71,7 @@
 <div class="btn-group my-2 mx-2">
 	<a href="{% url 'workshop-equivalent' object.id %}" class="btn btn-primary" role="button">Workshop Äquivalenz Punkte ändern</a>
 	<a href="{% url 'workshop-update' object.id %}" class="btn btn-secondary" role="button">Workshop Status manuell ändern</a>
+	<a href="{% url 'workshop-add-to-list' object.id %}" class="btn btn-secondary" role="button">Workshop zu einer Workshopliste hinzufügen</a>
 </div>
 <br>
 <br>
