--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -28,6 +28,9 @@
           <a class="nav-link text-white" href="{% url 'order-list' %}">Bestellungen</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link text-white" href="{% url 'workshoplist-list' %}">Workshoplisten</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link text-white" href="{% url 'printbatch-list' %}">Druckaufträge</a>
         </li>
         {% endif %}
