Add district and clan to workshop list detail view

--- a/src/base/templates/base/workshoplist_detail.html
+++ b/src/base/templates/base/workshoplist_detail.html
@@ -11,8 +11,11 @@
 	<table class="table table-striped">
 		<thead>
 			<tr>
+				<th scope="col">Diözese / Bezirk</th>
+				<th scope="col">Stamm</th>
 				<th scope="col">Workshop Status</th>
 				<th scope="col">Workshop Name</th>
+				<th scope="col">Workshop Nummer</th>
 				<th scope="col">Workshop Beschreibung</th>
 				<th scope="col">Aktionen</th>
 			</tr>
@@ -20,9 +23,12 @@
 		<tbody>
 			{% for workshop in object.workshops.all %}
 				<tr>
+					<td>{{workshop.order.district}}</td>
+					<td>{{workshop.order.clan}}</td>
 					<td class="{% if workshop.status == 'A' or workshop.status == 'E'%}bg-warning{% else %}{% if workshop.status == 'U' or workshop.status == 'R' %}bg-danger{% else %}bg-success{% endif %}{% endif %}">
 						{{workshop.get_status_display}}</td>
 					<td>{{workshop.name}}</td>
+					<td>{% if workshop.annotated_id %}{{workshop.annotated_id}}{% else %}Noch nicht nummeriert{% endif %}</td>
 					<td>{{workshop.description}}</td>
 					<td><a href="{% url 'workshop-detail' workshop.id %}" class="btn btn-primary btn-sm" role="button">Ansehen</a></td>
 					<td><a href="{% url 'workshop-remove-from-list' workshop.id object.id %}" class="btn btn-danger btn-sm" role="button">Entfernen</a></td>
