Change button size

--- a/src/base/templates/base/workshoplist_list.html
+++ b/src/base/templates/base/workshoplist_list.html
@@ -21,8 +21,8 @@
 				<tr>
 					<th scope="row">{{list.name}}</th>
 					<td>
-						<a href="{% url 'workshoplist-detail' list.id %}" class="btn btn-primary" role="button">Ansehen</a>
-						<a href="{% url 'workshoplist-delete' list.id %}" class="btn btn-danger" role="button">Löschen</a>
+						<a href="{% url 'workshoplist-detail' list.id %}" class="btn btn-primary btn-sm" role="button">Ansehen</a>
+						<a href="{% url 'workshoplist-delete' list.id %}" class="btn btn-danger btn-sm" role="button">Löschen</a>
 					</td>
 				</tr>
 			{% endfor %}
