Add download of workshop lists

--- a/src/base/templates/base/workshoplist_detail.html
+++ b/src/base/templates/base/workshoplist_detail.html
@@ -3,6 +3,8 @@
 {% block title %}{{object.name}}{% endblock %}
 {% block header %}{{object.name}}{% endblock %}
 {% block actions %}
+<a href="{% url 'workshoplist-download' object.id %}" class="btn btn-success" role="button">Download</a>
+
 {% endblock %}
 {% block body %}
 
