--- a/src/base/templates/base/workshopprintbatch_list.html
+++ b/src/base/templates/base/workshopprintbatch_list.html
@@ -5,6 +5,7 @@
 {% block actions %}
 <a href="{% url 'printbatch-annotate' %}" class="btn btn-primary" role="button">Workshops durchnummerieren</a>
 <a href="{% url 'printbatch-create' %}" class="btn btn-success" role="button">Neuen Druckauftrag erstellen</a>
+<a href="{% url 'all-ws-download' %}" class="btn btn-success" role="button">Alle Workshops downloaden</a>
 {% endblock %}
 {% block body %}
 {% if object_list %}
