--- a/src/base/templates/base/workshop_detail.html
+++ b/src/base/templates/base/workshop_detail.html
@@ -59,6 +59,7 @@
 						<h5 class="card-title">{{entry.action}}</h5>
 						{% if entry.user %}<h6 class="card-subtitle mb-2 text-muted">{{entry.user}}</h6>{% endif %}
 						<h6 class="card-subtitle mb-2 text-muted">{{entry.created|date:'d.m.Y H:i'}}</h6>
+						<h6 class="card-subtitle mb-2 text-muted">Phase: {{entry.get_time_slot_display}}</h6>
 						<h6 class="card-subtitle mb-2 text-muted">{% if entry.old_status %}{{entry.get_old_status_display}} -> {% endif %}{{entry.get_new_status_display}}</h6>
 						<p class="card-text"><b>{{entry.title}}</b><br>{{entry.message}}</p>
 					</div>
