Workshop Vote Option added
With this changes, participants can vote for up to 3 workshops by scanning their individual qr code.
The number of votes is shown in the workshop_list view

--- a/src/base/templates/base/order_detail.html
+++ b/src/base/templates/base/order_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
-{% block title %}Workshop {{object.name}}{% endblock %}
-{% block header %}Workshop {{object.name}}{% endblock %}
+{% block title %}Bestellung{{object.name}}{% endblock %}
+{% block header %}Bestellung{{object.name}}{% endblock %}
 {% block actions %}
 	<a href="{{order.get_pretix_url}}" class="btn text-white" style="background-color: #7f5a91; border-color:#715081;" role="button">Bestellung in pretix öffnen</a>
 {% endblock %}
