--- a/src/base/templates/base/workshop_list.html
+++ b/src/base/templates/base/workshop_list.html
@@ -18,6 +18,7 @@
 				<th scope="col">Workshop Phase</th>
 				<th scope="col">Workshop Ort</th>
 				<th scope="col">Workshop Name</th>
+				<th scope="col">Workshop Stimmen</th>
 				<th scope="col">Aktionen</th>
 			</tr>
 		</thead>
@@ -34,6 +35,7 @@
 					<td>{{workshop.get_time_slot_display}}</td>
 					<td>{{workshop.get_location_display}}</td>
 					<td>{{workshop.name}}</td>
+                    <td>{{ workshop.voted_participants.count }}</td>
 					<td><a href="{% url 'workshop-detail' workshop.id %}" class="btn btn-primary btn-sm" role="button">Ansehen</a></td>
 				</tr>
 			{% endfor %}
